--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" data-bs-theme="dark">
   {{ partial "head/head.html" . }}
-  <body class="d-flex flex-column min-vh-100">
+  <body class="d-flex flex-column min-vh-100 text-break">
     {{- block "main" . -}}{{- end -}}
   </body>
 </html>
